Update settings categories. Add option for customizing long-press key layout. Draw icon key hints
The texts for more keys have been updated:
* morekeys_a should now include only letters relevant to the active language
* morekeys_misc_a should include misc letters (accents, etc) not specifically needed for typing in the language

The above still needs to be applied to most other languages. Only QWERTY has been updated with the new morekeys system. Other layouts still need to be updated.

--- a/tools/make-keyboard-text-py/locales/DEFAULT.json
+++ b/tools/make-keyboard-text-py/locales/DEFAULT.json
@@ -1,28 +1,84 @@
 {
     "locale": "DEFAULT",
     "morekeys": {
-        "a": [],
+        "q": [],
+        "w": [],
         "e": [],
-        "i": [],
-        "o": [],
-        "u": [],
-        "s": [],
-        "n": [],
-        "c": [],
-        "y": [],
-        "d": [],
         "r": [],
         "t": [],
-        "z": [],
-        "k": [],
-        "l": [],
+        "y": [],
+        "u": [],
+        "i": [],
+        "o": [],
+        "p": [],
+        "a": [],
+        "s": [],
+        "d": [],
+        "f": [],
         "g": [],
-        "v": [],
         "h": [],
         "j": [],
-        "w": [],
-        "q": [],
+        "k": [],
+        "l": [],
+        "z": [],
         "x": [],
+        "c": [],
+        "v": [],
+        "b": [],
+        "n": [],
+        "m": [],
+
+        "misc_a": [
+            "à",
+            "á",
+            "â",
+            "ä",
+            "æ",
+            "ã",
+            "å",
+            "ā"
+        ],
+        "misc_e": [
+            "é",
+            "è",
+            "ê",
+            "ë",
+            "ē"
+        ],
+        "misc_i": [
+            "í",
+            "î",
+            "ï",
+            "ī",
+            "ì"
+        ],
+        "misc_o": [
+            "ó",
+            "ô",
+            "ö",
+            "ò",
+            "œ",
+            "ø",
+            "ō",
+            "õ"
+        ],
+        "misc_u": [
+            "ú",
+            "û",
+            "ü",
+            "ù",
+            "ū"
+        ],
+        "misc_s": [
+            "ß"
+        ],
+        "misc_n": [
+            "ñ"
+        ],
+        "misc_c": [
+            "ç"
+        ],
+
         "nordic_row2_10": [],
         "nordic_row2_11": [],
         "east_slavic_row2_2": [],
@@ -55,6 +111,7 @@
             "₱"
         ],
         "punctuation": [
+            "/",
             "?",
             "!",
             "\u203d",
@@ -65,6 +122,7 @@
             "="
         ],
         "tablet_punctuation": [
+            "/",
             "?",
             "!",
             "\u203d",
@@ -314,6 +372,119 @@
         "double_lqm_rqm": "„,“,”",
         "double_9qm_lqm": "”,„,“",
         "double_9qm_rqm": "“,„,”",
-        "double_rqm_9qm": "“,”,„"
+        "double_rqm_9qm": "“,”,„",
+
+        "number_1": "1",
+        "number_2": "2",
+        "number_3": "3",
+        "number_4": "4",
+        "number_5": "5",
+        "number_6": "6",
+        "number_7": "7",
+        "number_8": "8",
+        "number_9": "9",
+        "number_0": "0"
+    },
+
+    "actions": {
+        "1": [],
+        "2": [],
+        "3": [],
+        "4": [],
+        "5": [],
+        "6": [],
+        "7": [],
+        "8": [],
+        "9": [],
+        "0": [],
+
+        "q": [],
+        "w": [],
+        "e": [],
+        "r": [],
+        "t": [],
+        "y": [
+            "!icon/action_redo|!code/action_redo"
+        ],
+        "u": [],
+        "i": [],
+        "o": [],
+        "p": [],
+
+        "a": [
+            "!icon/action_select_all|!code/action_select_all"
+        ],
+        "s": [],
+        "d": [],
+        "f": [],
+        "g": [],
+        "h": [],
+        "j": [],
+        "k": [],
+        "l": [],
+
+        "z": [
+            "!icon/action_undo|!code/action_undo"
+        ],
+        "x": [
+            "!icon/action_cut|!code/action_cut"
+        ],
+        "c": [
+            "!icon/action_copy|!code/action_copy"
+        ],
+        "v": [
+            "!icon/action_paste|!code/action_paste"
+        ],
+        "b": [],
+        "n": [],
+        "m": []
+    },
+
+    "qwertysyms": {
+        "1": "!",
+        "2": "@",
+        "3": "#",
+        "4": "$",
+        "5": "%",
+        "6": "^",
+        "7": "&",
+        "8": "*",
+        "9": "(",
+        "0": ")",
+
+        "q": "\\%",
+        "w": "\\\\",
+        "e": "|",
+        "r": "=",
+        "t": "[",
+        "y": "]",
+        "u": "<",
+        "i": ">",
+        "o": "{",
+        "p": "}",
+
+        "a": "@",
+        "s": "#",
+        "d": [
+            "$",
+            "€",
+            "£",
+            "¥",
+            "¢"
+        ],
+        "f": "\\%",
+        "g": ["&", "|"],
+        "h": ["-", "–", "—", "_"],
+        "j": ["+", "="],
+        "k": ["(", "[", "{", "<"],
+        "l": [")", "]", "}", ">"    ],
+
+        "z": "*",
+        "x": "\"",
+        "c": "'",
+        "v": ":",
+        "b": ";",
+        "n": "!",
+        "m": ["?", "/"]
     }
 }
