--- a/tools/make-keyboard-text-py/locales/en.json
+++ b/tools/make-keyboard-text-py/locales/en.json
@@ -1,57 +1,6 @@
 {
     "locale": "en",
-    "morekeys": {
-        "a": [
-            "à",
-            "á",
-            "â",
-            "ä",
-            "æ",
-            "ã",
-            "å",
-            "ā"
-        ],
-        "e": [
-            "é",
-            "è",
-            "ê",
-            "ë",
-            "ē"
-        ],
-        "i": [
-            "í",
-            "î",
-            "ï",
-            "ī",
-            "ì"
-        ],
-        "o": [
-            "ó",
-            "ô",
-            "ö",
-            "ò",
-            "œ",
-            "ø",
-            "ō",
-            "õ"
-        ],
-        "u": [
-            "ú",
-            "û",
-            "ü",
-            "ù",
-            "ū"
-        ],
-        "s": [
-            "ß"
-        ],
-        "n": [
-            "ñ"
-        ],
-        "c": [
-            "ç"
-        ]
-    },
+    "morekeys": {},
     "keyspec": {},
     "label": {},
     "keylabel": {},
