Add missing superscripts and subscripts

--- a/tools/make-keyboard-text-py/locales/DEFAULT.json
+++ b/tools/make-keyboard-text-py/locales/DEFAULT.json
@@ -173,6 +173,7 @@
         "arabic_diacritics": [],
         "symbols_1": [
             "¹",
+            "₁",
             "½",
             "⅓",
             "¼",
@@ -180,26 +181,44 @@
         ],
         "symbols_2": [
             "²",
+            "₂",
             "⅔"
         ],
         "symbols_3": [
             "³",
+            "₃",
             "¾",
             "⅜"
         ],
         "symbols_4": [
-            "⁴"
+            "⁴",
+            "₄"
         ],
         "symbols_5": [
+            "⁵",
+            "₅",
             "⅝"
         ],
-        "symbols_6": [],
+        "symbols_6": [
+            "⁶",
+            "₆"
+        ],
         "symbols_7": [
+            "⁷",
+            "₇",
             "⅞"
         ],
-        "symbols_8": [],
-        "symbols_9": [],
+        "symbols_8": [
+            "⁸",
+            "₈"
+        ],
+        "symbols_9": [
+            "⁹",
+            "₉"
+        ],
         "symbols_0": [
+            "⁰",
+            "₀",
             "ⁿ",
             "∅"
         ],
