Update punctuation to be more similar to other keyboards

--- a/tools/make-keyboard-text-py/locales/DEFAULT.json
+++ b/tools/make-keyboard-text-py/locales/DEFAULT.json
@@ -114,26 +114,42 @@
             "₱"
         ],
         "punctuation": [
-            "/",
+            "!autoColumnOrder!8",
+            "\\,",
             "?",
             "!",
-            "\u203d",
-            "\u2026",
-            "_",
-            "\\\\",
-            "|",
-            "="
+            "#",
+            "!text/keyspec_right_parenthesis",
+            "!text/keyspec_left_parenthesis",
+            "/",
+            ";",
+            "'",
+            "@",
+            ":",
+            "-",
+            "\"",
+            "+",
+            "\\%",
+            "&"
         ],
         "tablet_punctuation": [
-            "/",
+            "!autoColumnOrder!8",
+            "\\,",
             "?",
             "!",
-            "\u203d",
-            "\u2026",
-            "_",
-            "\\\\",
-            "|",
-            "="
+            "#",
+            "!text/keyspec_right_parenthesis",
+            "!text/keyspec_left_parenthesis",
+            "/",
+            ";",
+            "'",
+            "@",
+            ":",
+            "-",
+            "\"",
+            "+",
+            "\\%",
+            "&"
         ],
         "star": [
             "†",
